--- a/exp-plot-help.Rmd
+++ b/exp-plot-help.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 The files required to retrieve the expression plots are the raw gene expression TPM counts and a patient diagnosis file. 
 
-```{r out.width = "70%"}
+```{r out.width = "50%", echo=FALSE}
 include_graphics("Instruction_images/expre_1.png")
 ```
 
@@ -24,7 +24,7 @@ The selected patient is depicted in a red triangular shape and green dots repres
 *The app has the addditional property to able to hover over the dots within the graph to retrieve sample specific meta information.* 
 
 
-```{r out.width = "70%"}
+```{r out.width = "50%", echo=FALSE}
 include_graphics("Instruction_images/Expr_2.png")
 ```
 
