--- a/exp-plot-help.Rmd
+++ b/exp-plot-help.Rmd
@@ -3,29 +3,33 @@ title: "exp_plot_help"
 output: html_document
 ---
 
-### EXPRESSION PLOTS
-
 ```{r include = FALSE}
 library(knitr)
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-The files required to retrieve the expression plots are the raw gene expression TPM counts and a patient diagnosis file. 
+### Expression plot
+
+The expression plot modules allows the user to generate a TPM plot for all samples for a single gene. The user will additionally be able to highlight a specific sample within the plot as well as the associated samples within the same group. 
+
+The module requires the user to upload 2 files:
+
+* **1. TPM count table.**
+
+* **2. Sample metadata file.**
 
 ```{r out.width = "50%", echo=FALSE}
 include_graphics("Instruction_images/expre_1.png")
 ```
 
+The expression plot module allows the user to select the patient and gene of interest using a drop down menu. 
 
-The application allows the user to select the patient and gene of interest using a drop down menu. 
+The selected patient is highlighted as a red triangle while the green dots highlight patients that are part of the same group. (refer to below image (1))
 
-The selected patient is depicted in a red triangular shape and green dots represent the expression of the gene from patients that fall in the same histology group. (refer to below image (1))
-
-*The app has the addditional property to able to hover over the dots within the graph to retrieve sample specific meta information.* 
-
+*The interactive plot has the addditional property of hovering over data points to display sample specific meta information.* 
 
 ```{r out.width = "50%", echo=FALSE}
 include_graphics("Instruction_images/Expr_2.png")
 ```
 
-The generated graph can be **saved as a png file** using the download button.(refer to the above image (2))
+The generated expression plot can be **saved as a png file** using the download button.(refer to the above image (2))
