--- a/sig_plot_help.Rmd
+++ b/sig_plot_help.Rmd
@@ -10,26 +10,27 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ### Signature plot
 
+The signature plot module allows the user to generate a gene signature TPM plot. This plot highlights a specific sample's TPM values for a given set of genes (signature) with comparisons against the full cohort (mean and median TPM).
+
 ```{r out.width = "50%", fig.align='center', echo=FALSE}
 include_graphics("Instruction_images/sig_plot.png")
 ```
 
-The three files required to plot the gene signature expressions are : 
+The module requires the user to upload 3 files:
 
-**1. Gene expression TPM counts.**
+* **1. TPM count table.**
 
-**2. Patient diagnosis file.**
+* **2. Sample metadata file.**
 
-**3. Text file containing the signature gene sets.** 
+* **3. Text file containing the gene signature.** 
 
 ```{r echo=FALSE}
 ex_gene_sig <- read.delim("Example_files/example_signatures.txt", header=T, sep="\t")
 ex_gene_sig[1:5,]
 ```
 
+User defined signature files can be created similar to the one provided above. 
 
-User define signature files can be created similar to the one provided above. 
+The specified sample to show in the gene signature TPM plot can be selected using the 'Select sample ID:' drop down menu. 
 
-Drop down menu is provided to select the interested patient ID (see above image (4.)). 
-
-Resulting plot can be **downloaded** as a png file using the download button at the bottom left corner. 
+The resulting plot can be **downloaded** as a png file using the download button at the bottom left corner. 
