--- a/gene_cor_help.Rmd
+++ b/gene_cor_help.Rmd
@@ -10,7 +10,9 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ### Pairwise gene correlation
 
-The pairwise gene correlation module requires only the input of the TPM file. 
+The pairwise gene correlation module requires the user to upload 1 file:
+
+* **1. TPM count table.**
 
 Two genes can be selected from the drop down lists (based on the first column of the TPM file). Additionally, different correlation methods (pearson, kendall and spearman) can be selected. 
 
