--- a/sig_plot_help.Rmd
+++ b/sig_plot_help.Rmd
@@ -14,8 +14,8 @@ The signature plot module allows the user to generate a gene signature TPM plot.
 
 The module requires the user to upload 3 files:
 
-```{r out.width = "50%", fig.align='center', echo=FALSE}
-include_graphics("Instruction_images/sig_plot_1.png")
+```{r out.width = "75%", fig.align='center', echo=FALSE}
+include_graphics("Instruction_images/sig_plot_1.jpg")
 ```
 
 * **1. TPM count table.**
@@ -32,5 +32,9 @@ ex_gene_sig[1:5,]
 User defined signature files can be created similar to the one provided above. 
 
 The specified sample to show in the gene signature TPM plot can be selected using the 'Select sample ID:' drop down list. 
+
+```{r out.width = "75%", fig.align='center', echo=FALSE}
+include_graphics("Instruction_images/sig_plot_2.jpg")
+```
 
 The final signature plot can be downloaded using the download button located at the bottom of the page. 
